client/css/main.css
/****************
*     HEADER    *
*****************/

.header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 45px;
    line-height: 45px;
    text-align: center;
    background: #F0592B;
    border-bottom: 1px solid #B54132;
    color: #fff;
    text-shadow: -1px 0 #B54132, 0 1px #B54132, 1px 0 #B54132, 0 -1px #B54132;
    margin: 0;
    font-weight: bold;
}

.menuButton {
    position: absolute;
    top: 0;
    left: 0;
    font-size: 20px;
    padding: 14px;
    color: #fff;
    text-shadow: -1px 0 #B54132, 0 1px #B54132, 1px 0 #B54132, 0 -1px #B54132;
    cursor: pointer;
}


/****************
*     CONTENT    *
*****************/

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    color: #333;
    background-color: #fff;
}

.content {
    position: fixed;
    overflow-y: scroll;
    top: 46px;
    left:0;
    right: 0;
    bottom: 0;
}


/****************
*     MENU      *
*****************/

.menu {
    overflow-x: hidden;
    overflow-y: scroll;
    position: absolute;
    top: 0;
    bottom: 0;
    min-height: 400px;
    left: -300px;
    font-size: 17px !important;
    width: 250px;
    background: #fff;
    border-right: 1px solid #B54132;
    z-index: 9999;
    transition: 300ms left;
}

.menu ul {
    padding: 0;
    list-style: none;
    border-top: 1px solid #B54132;
}

.menu .profile {
    padding: 5px;
    height: 70px;
    width: 100%;
    color: #B54132;
    overflow: none;
}

.menu .profilePic {
    margin-right:10px;
    height: 75px;
    width: 75px;
    border: 2px solid #B54132;
    border-radius: 50%;
}

.menu .profileName {
    width: 10px;
    vertical-align: bottom;
}

.menu .logo {
    position: absolute;
    left: 65px;
    bottom: 0;
    width: 100px;
}

.menu .badge {
    float: right;
    margin: 3px 10px;
    background: #F0592B;
}

.menu .nav-stacked li+li {
    margin: 0;
}

.menu li a,
.menu li a:hover {
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    color: #F0592B;
    background: #fff;
    cursor: pointer;
}

.menu li>a {
    position: relative;
    display: block;
    padding: 10px 0;
}

.menu li.active a,
.menu li.active a:hover {
    color: #fff;
    background: #F0592B;
    text-shadow: -1px 0 #B54132, 0 1px #B54132, 1px 0 #B54132, 0 -1px #B54132;
}

.menu li.active .badge {
    color: #F0592B;
    background: #fff;
    text-shadow: -1px 0 #B54132, 0 1px #B54132, 1px 0 #B54132, 0 -1px #B54132;
    border: 1px solid #B54132;
}

.menu .fa {
    width: 60px;
    text-align: center;
}

.menu-visible {
    left: 0 !important;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    min-height: 400px;
    background-color: rgba(0, 0, 0, .65);
    background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC) repeat scroll transparent\9;
    z-index: 9997;
    color: white;
}


/****************
*  NOTIFICATION *
*****************/

.notification {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 50px;
    padding: 15px;
    z-index: 9999;
}

.notification .dismiss {
    float: right;
}

.notification.error {
    background: #f2dede;
    border-top: 1px solid #ebccd1;
    color: #a94442;
}

.notification.warning {
    background: #fcf8e3;
    border-top: 1px solid #faebcc;
    color: #8a6d3b;
}

.notification.info {
    background: #d9edf7;
    border-top: 1px solid #bce8f1;
    color: #31708f;
}

.notification.success {
    background: #dff0d8;
    border-top: 1px solid #d6e9c6;
    color: #3c763d;
}


/****************
*     COMMON    *
*****************/

.badge {
    display: inline-block;
    min-width: 10px;
    padding: 3px 7px;
    font-size: 12px;
    font-weight: 700;
    line-height: 1;
    color: #fff;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    border-radius: 10px;
}

a {
    text-decoration: none;
}

.btn-primary {
    color: #fff;
    background: #F0592B;
}

.topBox {
    position: relative;
    height: 200px;
    width: 100%;
    border-bottom: 1px solid #B54132;
    overflow: hidden;
}

.topBox img {
    display: block;
    margin: 0 auto;
    height: 100%;
}

.topBox a {
    position: absolute;
    bottom: 0;
    right: 0;
    border-top: 1px solid #d6e9c6;
    border-right: 1px solid #d6e9c6;
    border-radius: 0;
}

.topBox .map {
    height: 100%;
    width: 100%;
}

.topBox .btn {
    border-radius: 0;
}


/****************
*      FORM     *
*****************/

.pure-control-group .pure-button {
    width: 100%;
    height: 75px;
    background: #F0592B;
    border: 1px solid #B54132;
}

.pure-control-group{
    margin-top: 10px
}

.form-control {
    width: 100%;
    border-radius: 0 !important;
}

.pure-control-group label {
    font-weight: bold;
}

.pure-controls .btn-primary {
    float: right;
}


/****************
*     TABLE     *
*****************/

.pure-table {
    width: 100%;
}

.pure-table tbody {
    border-bottom: 1px solid #ddd;
}

.pure-table .listBox {
    width: 75px;
    height: 75px;
    display: none;
}

.pure-table td {
    padding: 4px !important;
}


/****************
*    Profile and Checkin    *
*****************/

.profile-form,
.checkin-form {
    max-width: 500px;
    margin: auto;
    padding: 1.5em;
}

.checkin-form .fa {
    vertical-align: middle;
}


/****************
*    H:520px;   *
*****************/

@media screen and (max-height: 520px) {
    .menu .logo {
        display: none;
    }
}


/****************
*    w:450px;   *
*****************/

@media screen and (min-width: 450px) {
    .table .listBox {
        display: block;
    }
    .table .details div:nth-child(2) {
        position: absolute;
        bottom: 0;
        width: 95%;
    }
    .form-control {
        width: 250px;
    }
    .pure-controls .btn-primary {
        float: none;
        margin-left: 10px;
    }
    .pure-control-group .pure-button {
        width: 250px;
    }
}

